--- a/src/conf/settings.conf
+++ b/src/conf/settings.conf
@@ -1,9 +1,9 @@
 {
 	"port":"12345",
-	"n01":"192.168.1.101",
-	"n02":"192.168.1.101",
-	"n03":"192.168.1.101",
-	"p01":"12342",
-	"p02":"12322",
-	"p03":"12312"
+	"n01":"localhost",
+	"n02":"localhost",
+	"n03":"localhost",
+	"p01":"22333",
+	"p02":"23333",
+	"p03":"24444"
 }
