--- a/src/conf/settings.conf
+++ b/src/conf/settings.conf
@@ -1,12 +1,6 @@
 {
 	"port":"12345",
-	"n01":"localhost",
-	"n02":"localhost",
-	"n03":"localhost",
-	"p01":"1111",
-	"p02":"2222",
-	"p03":"3333",
-	"p11":"4444",
-    "p12":"5555",
-    "p13":"6666"
+	"n01":"localhost:11111",
+	"n02":"localhost:22222",
+	"n03":"localhost:33333",
 }
