--- a/src/conf/settings.conf
+++ b/src/conf/settings.conf
@@ -1,6 +1,6 @@
 {
 	"port":"12345",
-	"n01":"localhost:11111",
+	"n01":"192.168.1.101:11111",
 	"n02":"localhost:22222",
-	"n03":"localhost:33333",
+	"n03":"localhost:33333"
 }
